# timebeing_backend

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  clerk_start.py  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline-CI.yaml  pipeline-DockerHub.yaml
ai_docs/: api_schema.md  database_diagram.md
migrations/: env.py
migrations/versions/: 168f31341020_altering_habit_table_for_nullable_.py  2656ac15afd5_cirando_tabelas.py  4c2892d58714_altering_task_for_nullable_columns.py  580f115b7a5a_add_scheduled_time_on_tasks.py  66c7ef3f6e4e_habit_default_prompt.py  794fe148c06f_atualizando_notify_at_para_timedelta.py  8b419018afc2_creating_tables_relationships.py  8ec1fb8281a7_creating_tables.py  9687da379a54_creating_tables.py  a7b682f5ede5_merge_conflicting_heads.py  a91c03948027_creating_task_table.py  adccf34a9834_add_is_focus_to_task.py  be5ff0adee55_add_user_id_to_all_models.py  e1de12db14d6_atualizando_tabela_tasks_para_ter_.py
timebeing_backend/: auth_middleware.py  database.py  logger.py  main.py  settings.py
timebeing_backend/cruds/: habit.py  project.py  task.py
timebeing_backend/models/: commom_mixins.py  habit.py  project.py  task.py
timebeing_backend/routers/: habit.py  project.py  task.py
timebeing_backend/scheduler/: jobs.py  manager.py
timebeing_backend/schemas/: habit.py  project.py  task.py
